//*****************************************************************************
/// \copyright (c) 2018,2018 by Seidenader Maschinenbau GmbH
/// \file Variant.proto
/// All Rights Reserved
//*****************************************************************************
/// Protobuf file for the Variant values
//******************************************************************************

syntax = "proto3";
package SvPb;

message Variant
{
	uint32 type = 1;			//The Variant type VT
	uint32 count = 2;			//The number of array elements if of type VT_ARRAY

	oneof data
	{
		bool bVal = 3;
		sint32 lVal = 4;
		sint64 llVal = 5;
		uint32 ulVal = 6;
		uint64 ullVal = 7;
		double dblVal = 8;
		float fltVal = 9;
		string strVal = 10;
		bytes bytesVal = 11;	//This is used to tranfer arrays and binary data (e.g. files)
	}
}
